bug - remove borders on insights on mobile, and horizontal scroll

--- a/src/assets/sass/lbd/_misc.scss
+++ b/src/assets/sass/lbd/_misc.scss
@@ -172,3 +172,9 @@ legend{
 .font-green {
 	color: #1b9a78;
 }
+
+@media screen and (max-width:767px) {
+	.table-responsive {
+		border: 0px;
+	}
+}
