--- a/src/assets/sass/lbd/_responsive.scss
+++ b/src/assets/sass/lbd/_responsive.scss
@@ -630,7 +630,7 @@
     .table-responsive {
         width: 100%;
         margin-bottom: 15px;
-        overflow-x: scroll;
+        //overflow-x: scroll;
         overflow-y: hidden;
         -ms-overflow-style: -ms-autohiding-scrollbar;
         -webkit-overflow-scrolling: touch;
